--- a/_cases/2024/DIVD-2024-00042.md
+++ b/_cases/2024/DIVD-2024-00042.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Solarwinds Web Help Desk Hardcoded Credential and Deserialization Remote Code Execution Vulnerability"
+title: "Solarwinds Web Help Desk Hardcoded Credential and Deserialization RCE Vulnerability"
 author: Alwin Warringa
 lead: Alwin Warringa
 excerpt: "The SolarWinds Web Help Desk software is affected by two critical vulnerabilities, allowing remote unauthenticated user to access internal functionality and run commands on the host machine."
@@ -19,7 +19,7 @@ recommendation: "Update to version 12.8.3 HF3"
 workaround: "none"
 patch_status: Patch available
 status : Open
-start: 2024–09-24
+start: 2024–09-23
 timeline:
 - start: 2024-09-24
   end:
