--- a/_cases/2024/DIVD-2024-00042.md
+++ b/_cases/2024/DIVD-2024-00042.md
@@ -14,7 +14,7 @@ cves:
 product:
 - Solarwinds Web Help Desk
 versions: 
-- WHD 12.8.3 HF1 and all previous versions
+- Solarwinds Web Help Desk 12.8.3 HF1 and all previous versions
 recommendation: "Update to version 12.8.3 HF3"
 workaround: "none"
 patch_status: Patch available
