--- a/_cases/2024/DIVD-2024-00042.md
+++ b/_cases/2024/DIVD-2024-00042.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Solarwinds Web Help Desk Hardcoded Credential and Deserialization RCE Vulnerability"
+title: "Solarwinds Web Help Desk critical vulnerabilities"
 author: Alwin Warringa
 lead: Alwin Warringa
 excerpt: "The SolarWinds Web Help Desk software is affected by two critical vulnerabilities, allowing remote unauthenticated user to access internal functionality and run commands on the host machine."
