--- a/_cases/2024/DIVD-2024-00042.md
+++ b/_cases/2024/DIVD-2024-00042.md
@@ -37,7 +37,7 @@ Solarwinds Web Help Desk, has disclosed two critical security vulnerabilities af
 
 ## Recommendations
 
-To remediate CVE-2024-28987 and CVE-2024-28987, update to version 12.8.3 HF3. You can find a link to the Solarwinds Web Helpdesk bulletin at the bottom of this post. Please note that applying the hotfix requires some manual steps which are explained in the security bulletin.
+To remediate {% cve CVE-2024-28987 %} and {% cve CVE-2024-28987 %}, update to version 12.8.3 HF3. You can find a link to the Solarwinds Web Helpdesk bulletin at the bottom of this post. Please note that applying the hotfix requires some manual steps which are explained in the security bulletin.
 
 ## What we are doing
 
