--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -46,7 +46,12 @@ timeline:
 - start: 2024-06-20
   end:
   event: "Rescan executed and second round of notifications sent"
-
+- start: 2024-10-15
+  end:
+  event: "Rescan executed and third round of notifications sent"
+- start: 2024-10-21
+  end:
+  event: "Case closed"
 #ips: 0
 
 ---
