--- a/_cases/2024/DIVD-2024-00041.md
+++ b/_cases/2024/DIVD-2024-00041.md
@@ -59,6 +59,7 @@ DIVD is currently working to identify parties that are running a vulnerable vers
 ## More information
 
 * {% cve CVE-2024-6670 %}
+* {% cve CVE-2024-7763 %}
 * [National Vulnerability Database for CVE-2024-6670](https://nvd.nist.gov/vuln/detail/CVE-2024-6670)
 - [WhatsUp Gold Security Bulletin](https://community.progress.com/s/article/WhatsUp-Gold-Security-Bulletin-August-2024)
 - [Summoning Team Analysis](https://summoning.team/blog/progress-whatsup-gold-sqli-cve-2024-6670/)
