--- a/_cases/2024/DIVD-2024-00042.md
+++ b/_cases/2024/DIVD-2024-00042.md
@@ -31,6 +31,12 @@ timeline:
 - start: 2024-10-18
   end:
   event: "Case opened and starting first scan."
+- start: 2024-10-30
+  end:
+  event: "Starting second scan."
+- start: 2024-10-30
+  end:
+  event: "Mails sent out."
 ---
 
 ## Summary
