--- a/_cases/2024/DIVD-2024-00038.md
+++ b/_cases/2024/DIVD-2024-00038.md
@@ -9,7 +9,10 @@ researchers:
 - Dennis Kussendrager
 - Stan Plasmeijer
 cves:
-- CVE-2024-47076, CVE-2024-47175, CVE-2024-47176, CVE-2024-47177 
+- CVE-2024-47076
+- CVE-2024-47175
+- CVE-2024-47176
+- CVE-2024-47177 
 product:
 - CUPS
 versions: 
