--- a/_cases/2024/DIVD-2024-00038.md
+++ b/_cases/2024/DIVD-2024-00038.md
@@ -16,7 +16,10 @@ cves:
 product:
 - CUPS
 versions: 
-- cups-browsed ≤ 2.0.1, libcupsfilters ≤ 2.1b1, libppd ≤ 2.1b1, cups-filters ≤ 2.0.
+- cups-browsed ≤ 2.0.1
+- libcupsfilters ≤ 2.1b1
+- libppd ≤ 2.1b1
+- cups-filters ≤ 2.0.
 recommendation: "Update to a non-vulnerable version"
 workaround: "Disable and remove the cups-browsed service if not needed. Block traffic to UDP port 631 and DNS-SD traffic if not necessary."
 patch_status: Patch available
