--- a/_cases/2024/DIVD-2024-00038.md
+++ b/_cases/2024/DIVD-2024-00038.md
@@ -40,7 +40,7 @@ timeline:
 ---
 
 ## Summary
-According to public research, four vulnerabilities (CVE-2024-47176, CVE-2024-47076, CVE-2024-47175, and CVE-2024-47177) affect various components of the open-source CUPS printing service common to Linux and UNIX systems. When attackers chain these vulnerabilities together, they can remotely run commands on a target web-facing device or on a device on a local network they can already access.
+According to public research, four vulnerabilities ({% cve CVE-2024-47176 %}, {% cve CVE-2024-47076 %}, {% cve CVE-2024-47175 %}, and {% cve CVE-2024-47177 %}) affect various components of the open-source CUPS printing service common to Linux and UNIX systems. When attackers chain these vulnerabilities together, they can remotely run commands on a target web-facing device or on a device on a local network they can already access.
 
 ## Recommendations
 Mitigating risks associated with vulnerabilities requires a combination of proactive measures and real-time defenses. Here are some recommendations:  
