--- a/_cases/2024/DIVD-2024-00046.md
+++ b/_cases/2024/DIVD-2024-00046.md
@@ -35,7 +35,7 @@ timeline:
 ---
 
 ## Summary
-Ivanti is disclosing a critical vulnerability in Ivanti CSA 4.6 which was incidentally addressed in the patch released on 10 September (CSA 4.6 Patch 519). Successful exploitation could allow a remote unauthenticated attacker to access restricted functionality. If {% cve CVE-2024-8963 %} is used in conjunction with {% cve CVE-2024-8190 %} an attacker can bypass admin authentication and execute arbitrary commands on the appliance.
+Ivanti has disclosed a critical vulnerability in Ivanti CSA 4.6 which was incidentally addressed in the patch released on 10 September (CSA 4.6 Patch 519). Successful exploitation could allow a remote unauthenticated attacker to access restricted functionality. If {% cve CVE-2024-8963 %} is used in conjunction with {% cve CVE-2024-8190 %} an attacker can bypass admin authentication and execute arbitrary commands on the appliance.
 
 ## Recommendations
 
