--- a/_cases/2024/DIVD-2024-00041.md
+++ b/_cases/2024/DIVD-2024-00041.md
@@ -40,7 +40,12 @@ timeline:
 - start: 2024-10-17
   end:
   event: "Mails sent out."
-
+- start: 2024-11-12
+  end:
+  event: "Second mail round has been sent out."
+- start: 2024-11-12
+  end:
+  event: "Case closed."
 ---
 
 ## Summary
