Timeline update for 2024-00004

--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -32,6 +32,18 @@ timeline:
 - start: 2023-10-04
   end:
   event: "Case started"
+- start: 2024-03-01
+  end:
+  event: "Discovery of NGOs and their domains started."
+- start: 2024-09-31
+  end:
+  event: "Roughly 56.000 candidate NGOs found for scanning, continuing discovery."
+- start: 2024-11-04
+  end: 
+  event: "Vulnerability scanning has started on a first set of organisations."
+- start: 2024-11-20
+  end:
+  event: "Proceeding with first round of vulnerability notifications."
 ---
 
 ## Summary
