--- a/_cases/2024/DIVD-2024-00046.md
+++ b/_cases/2024/DIVD-2024-00046.md
@@ -29,7 +29,10 @@ timeline:
 - start: 2024-11-11
   end:
   event: "Case opened and starting first scan."
-- start: 2024-11-12
+- start: 2024-11-20
+  end:
+  event: "Second scan."
+- start: 2024-11-20
   end:
   event: "Mails sent out."
 ---
