--- a/_cases/2024/DIVD-2024-00042.md
+++ b/_cases/2024/DIVD-2024-00042.md
@@ -19,8 +19,9 @@ versions:
 recommendation: "Update to version 12.8.3 HF3"
 workaround: "none"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-09-24
+end: 2024-11-20
 timeline:
 - start: 2024-09-24
   end:
@@ -37,6 +38,14 @@ timeline:
 - start: 2024-10-30
   end:
   event: "Mails sent out."
+- start: 2024-11-20
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2024-11-20
+  end:
+  event: "Case closed."
+ips: 335
+
 ---
 
 ## Summary
