--- a/_cases/2024/DIVD-2024-00047.md
+++ b/_cases/2024/DIVD-2024-00047.md
@@ -28,9 +28,12 @@ timeline:
 - start: 2024-11-20
   end:
   event: "DIVD finds fingerprint, preparing to scan."
-- start: 2024-11-20
+- start: 2024-11-21
   end:
   event: "Case opened and starting first scan."
+- start: 2024-11-21
+  end:
+  event: "DIVD begins notifying owners of vulnerable systems." 
 ---
 
 ## Summary
