Closing state of 2024-00029

--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -18,7 +18,7 @@ versions:
 recommendation: "Install the update as soon as possible"
 workaround: "None"
 patch_status: Available
-status : Open
+status : Closed
 start: 2024-06-21
 end:
 timeline:
