--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -35,7 +35,7 @@ timeline:
 ---
 
 ## Summary
-This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs.
+This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs. 
 
 ## Recommendations
 After receiving a notification, it is very important that the vulnerability outlined in the correspondence is promptly addressed and remediated. The notification will provide detailed information, including the specific location and a comprehensive description of the identified vulnerability.
@@ -45,8 +45,8 @@ Please do not hesitate to reply to this email if you have any questions or need 
 ## What we are doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) has been proactively identifying and assessing non-governmental organizations (NGOs) for potential security vulnerabilities. Our team conducts thorough scans to detect any known weaknesses within these entities. Upon identifying vulnerabilities, we promptly notify and inform the affected organizations.
 
-These notifications are dispatched in multiple phases. The initial phase addresses general vulnerabilities uncovered during our preliminary scanning operations. Subsequently, a more detailed, manual inspection is conducted to identify deeper, more complex issues. The findings from this rigorous analysis are communicated in a second wave of notifications. This methodical approach ensures that NGOs are well-informed and equipped to enhance their cybersecurity posture.
- 
+These notifications are dispatched in multiple phases. The initial phase is in collaboration with Cyber Peace Institute, The Hague Humanity Hub and the The Hague Municipality and is focused on securing NGO's within The Hague. After this collaboration ends, DIVD will continue to scan the rest of the world for vulnerable assets of NGO's and notify and inform them of any vulnerabilities that are found.
+
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
  
