--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -23,7 +23,7 @@ recommendation: "If you have a any of the vulnerable firmware/software version o
 patch_status: Released
 status : Closed
 start: 2024-04-30
-end:
+end: 2024-10-21
 timeline:
 - start: 2024-04-30
   end:
