--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -45,9 +45,9 @@ Please do not hesitate to reply to this email if you have any questions or need 
 ## What we are doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) has been proactively identifying and assessing non-governmental organizations (NGOs) for potential security vulnerabilities. Our team conducts thorough scans to detect any known weaknesses within these entities. Upon identifying vulnerabilities, we promptly notify and inform the affected organizations.
 
-These notifications are dispatched in multiple phases. The initial phase is in collaboration with Cyber Peace Institute, The Hague Humanity Hub and the The Hague Municipality and is focused on securing NGO's within The Hague. After this collaboration ends, DIVD will continue to scan the rest of the world for vulnerable assets of NGO's and notify and inform them of any vulnerabilities that are found.
+These notifications are dispatched in multiple phases. The initial phase is in collaboration with Cyber Peace Institute, The Hague Humanity Hub and the The Hague Municipality and is focused on securing NGOs within The Hague. After this collaboration ends, DIVD will continue to scan the rest of the world for vulnerable assets of NGOs to notify and inform them of any vulnerabilities that are found.
 
-{% comment %}  Leave this here, so we see a timeline{% endcomment %}
+{% comment %}  Leave this here, so we see a timeline {% endcomment %}
 {% include timeline.html %}
  
 ## More information
