Updating timeline for Zimbra (DIVD-2024-00040) and closing case

--- a/_cases/2024/DIVD-2024-00040.md
+++ b/_cases/2024/DIVD-2024-00040.md
@@ -20,8 +20,9 @@ versions:
 recommendation: "Update to non vulnerable versions"
 workaround: "None"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-09-25
+end: 2024-11-26
 timeline:
 - start: 2024-09-25
   end:
@@ -37,7 +38,14 @@ timeline:
   event: "DIVD starts scanning the internet for vulnerable instances."
 - start: 2024-10-09
   end:
-  event: "DIVD starts notifying network owners with a possible vulnerable instance in their network"
+  event: "DIVD starts notifying network owners with a possible vulnerable instance in their network."
+- start: 2024-11-26
+  end:
+  event: "DIVD conducted a rescan and notified possible vulnerable instance owners for the second time."
+- start: 2024-11-26
+  end:
+  event: "Closing case."
+ips: 15129
 ---
 
 ## Summary
