Updating timeline with first notification round

--- a/_cases/2024/DIVD-2024-00048.md
+++ b/_cases/2024/DIVD-2024-00048.md
@@ -31,6 +31,9 @@ timeline:
 - start: 2024-11-26
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-11-27
+  end:
+  event: "DIVD starts notifying owners of potentially vulnerable instances."
 #ips:
 ---
 
