--- a/_cases/2020/DIVD-2020-00001.md
+++ b/_cases/2020/DIVD-2020-00001.md
@@ -13,7 +13,7 @@ excerpt: "
 redirect_from:
   - /DIVD-2020-00001/
 researchers:
-- 
+- Lennaert Oudshoorn
 cves:
 - CVE-2019-19781
 product:        Citrix ADC / Citrix Gateway / Netscaler ADC / Netscaler Gateway / Citrix SD-WAN WANOP
