--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -18,6 +18,7 @@ researchers:
 - Luc Groot Landeweer
 - Max van der Horst
 - Raymond Zwarts
+- Serena de Pater
 - Victor Pasman
 - Winko Erades van den Berg
 cves: n/a
