--- a/_cases/2024/DIVD-2024-00039.md
+++ b/_cases/2024/DIVD-2024-00039.md
@@ -18,7 +18,7 @@ versions:
 recommendation: "Update to Apache OFBiz version 18.12.15 or higher if available"
 workaround: "None"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-09-29
 timeline:
 - start: 2024-09-29
