fixed build error on Updated casefile DIVD-2024-00039

--- a/_cases/2024/DIVD-2024-00039.md
+++ b/_cases/2024/DIVD-2024-00039.md
@@ -20,6 +20,7 @@ workaround: "None"
 patch_status: Patch available
 status : Closed
 start: 2024-09-29
+end: 2024-12-2
 timeline:
 - start: 2024-09-29
   end:
