--- a/_cases/2024/DIVD-2024-00049.md
+++ b/_cases/2024/DIVD-2024-00049.md
@@ -1,16 +1,16 @@
 ---
 layout: case
-title: "Vulnerabilities in D-Link Routers: Backdoor and Command Injection Exploits"
+title: "Vulnerabilities in D-Link NAS: Backdoor and Command Injection Exploits"
 author: Stan Plasmeijer
 lead: Koen Schagen
-excerpt: "D-Link routers are affected by a backdoor vulnerability facilitated by hardcoded credentials and a command injection vulnerability."
+excerpt: "D-Link NAS are affected by a backdoor vulnerability facilitated by hardcoded credentials and a command injection vulnerability."
 researchers:
 - Koen Schagen
 cves:
 - CVE-2024-3273
 - CVE-2024-10914
 product:
-- D-Link Routers
+- D-Link NAS
 versions: 
 - DNS-120
 - DNR-202L
@@ -32,7 +32,7 @@ versions:
 - DNS-1100-4
 - DNS-1200-05
 - DNS-1550-04
-recommendation: "Install the update as soon as possible"
+recommendation: "Phase out the D-Link device or place it behind a VPN or an IP allowlist"
 workaround: "None"
 patch_status: "None"
 status : Open
