--- a/_cases/2024/DIVD-2024-00049.md
+++ b/_cases/2024/DIVD-2024-00049.md
@@ -48,6 +48,9 @@ timeline:
 - start: 2024-12-02
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-12-02
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable devices in their network."
 #ips:
 ---
 
