--- a/_cases/2024/DIVD-2024-00049.md
+++ b/_cases/2024/DIVD-2024-00049.md
@@ -51,7 +51,7 @@ timeline:
 - start: 2024-12-02
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
-#ips:
+ips: 223
 ---
 
 ## Summary
