--- a/_cases/2024/DIVD-2024-00050.md
+++ b/_cases/2024/DIVD-2024-00050.md
@@ -11,9 +11,9 @@ researchers:
 cves:
 - CVE-2024-41713
 product:
--Mitel MiCollab
+- Mitel MiCollab
 versions: 
--9.8 SP1 FP2 (9.8.1.201) and earlier
+- 9.8 SP1 FP2 (9.8.1.201) and earlier
 recommendation: "Upgrade to MiCollab 9.8 SP2 (9.8.2.12) or later"
 workaround: "none"
 patch_status: Patch available
