--- a/_cases/2024/DIVD-2024-00050.md
+++ b/_cases/2024/DIVD-2024-00050.md
@@ -29,6 +29,9 @@ timeline:
 - start: 2024-12-06
   end:
   event: "Case opened and starting first scan."
+- start: 2024-12-06
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable devices in their network."
 ---
 
 ## Summary
