--- a/_cases/2024/DIVD-2024-00051.md
+++ b/_cases/2024/DIVD-2024-00051.md
@@ -36,7 +36,7 @@ A critical vulnerability in ProjectSend, a widely-used open-source file-sharing 
 
 ## Recommendations
 
-To remediate {% cve CVE-2024-11680 %}, upgrade to version r1720 or later.
+To remediate {% cve CVE-2024-11680 %}, upgrade ProjectSend to version r1720 or later to resolve the improper authorisation vulnerability. Limit public access by applying strict network controls and review server logs for unusual activity, especially targeting `options.php` or unauthorised uploads in `upload/files/`. For any compromised systems, remove malicious files, restore original configurations, and investigate further for signs of exploitation. Establish a patch management process to ensure timely updates and minimise exposure to future vulnerabilities
 
 ## What we are doing
 
