--- a/_cases/2024/DIVD-2024-00051.md
+++ b/_cases/2024/DIVD-2024-00051.md
@@ -1,9 +1,9 @@
 ---
 layout: case
-title: "Improper authorization vulnerabilty in ProjectSend"
+title: "Improper authorization vulnerabilty in ProjectSend,"
 author: Florian Krijt
 lead: Koen Schagen
-excerpt: "Improper authorization vulnerabilty, cve-2024-11680, in open-source file-sharing application: ProjectSend,"
+excerpt: "Improper authorization vulnerabilty, CVE-2024-11680, in open-source file-sharing application: ProjectSend,"
 researchers:
 - Florian Krijt
 - Koen Schagen
@@ -13,7 +13,7 @@ product:
 - ProjectSend
 versions: 
 - ealier then r1720
-recommendation: "Upgrade to R1720 or later"
+recommendation: "Upgrade to r1720 or later"
 workaround: "none"
 patch_status: Patch available
 status : Open
@@ -43,3 +43,9 @@ To remediate {% cve CVE-2024-11680 %}, upgrade ProjectSend to version r1720 or l
 DIVD is currently working to identify parties that are running a vulnerable version of ProjectSend and to notify these parties. 
 
 {% include timeline.html %}
+
+## More information
+
+* {% cve CVE-2024-11680 %}
+* [VulnCheck Blog: CVE-2024-10914 Exploited in the Wild](https://vulncheck.com/blog/projectsend-exploited-itw)
+* [Cencys advisory CVE-2024-10914](https://censys.com/cve-2024-11680/)
