--- a/_cases/2024/DIVD-2024-00052.md
+++ b/_cases/2024/DIVD-2024-00052.md
@@ -2,7 +2,7 @@
 layout: case
 title: "Remote code execution in Cleo Harmony, VLCTrader and LexiCom"
 author: Alwin Warringa
-lead:Stan Plasmeijer
+lead: Alwin Warringa
 excerpt: "Cleo has identified an unrestricted file upload and download vulnerability (CVE-2024-50623) that could lead to remote code execution"
 researchers:
 - Alwin Warringa
