Added CVE records and update case file

--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -1,8 +1,8 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: "Product warning: Twentysix vulnerabilities in ioCharger devices"
-excerpt: "Researchers have discovered 17 critical vulnerabilities in the ioCharge Home and 9 critical vulnerabilities in the ioCharge Pedestal EV charging devices. Owners are advised to ensure that these devices cannot be reached from untrusted networks"
+title: "18 vulnerabilities in ioCharger devices"
+excerpt: "Researchers have discovered 17 critical vulnerabilities in the IoCharger Home, 9 of these vulnerabilities also affect  the IoCharger Pedestal EV charging devices. Owners are advised to ensure that these devices cannot be reached from untrusted networks."
 author: 
 - Frank Breedijk
 lead: Frank Breedijk
@@ -29,23 +29,13 @@ cves:
 - CVE-2024-43662
 - CVE-2024-43663
 - CVE-2024-43664
-- CVE-2024-43665
-- CVE-2024-43666
-- CVE-2024-43667
-- CVE-2024-43668
-- CVE-2024-43669
-- CVE-2024-43670
-- CVE-2024-43671
-- CVE-2024-43672
-- CVE-2024-43673
 product: 
-- ioCharge Home
-- ioCharge Pedestal
+- IoCharger Home
+- IoCharger Pedestal
 versions: 
-- ioCharge Home
-- ioCharge Pendestal
-recommendation: Do not expose your ioCharge equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
-patch_status: Vendor reports that patches have been developed, but has not disclosed details.
+- Any firmware version below 20241118-190348
+recommendation: Do not expose your IoCharger equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway and block all incoming traffic.
+patch_status: Vendor reports that patches have been developed, and are abvilable but has not disclosed details.
 -workaround: n/a
 status : Open
 status : Open
@@ -54,7 +44,7 @@ end:
 timeline:
 - start: 2024-08-13
   end:
-  event: "Vulnerability reported by Wilco van Beijnum and Harm van den Brink to CISRT"
+  event: "Vulnerability reported by Wilco van Beijnum and Harm van den Brink to CSIRT"
 - start: 2024-08-15
   end:
   event: "Vulnerability reported to and received by the vendor"
@@ -66,35 +56,26 @@ timeline:
   end:   open
   event: "Time to patch"
   # Time to patch is antoher important metric
-- start: 2024-08-15
-  end:  
-  event: "Asked the vendor for an update, we have  not received a substantive update."
 - start: 2024-09-02
   end:  
-  event: "Asked the vendor for an update. Vendor reports 'We have found the issue before, and we are planning to fix this issue in the nearly future.'"
+  event: "Vendor reports that the issue was found before fix is planned for the near future.'"
 - start: 2024-09-27
   end:  
-  event: "Asked vendor for an update. Vendor reports: 'we have developed the patch, need more time to test.'"
-- start: 2024-11-03
-  end:  
-  event: "Asked verdor for an update"
-- start: 2024-11-03
-  end:  
-  event: "Asked verdor for an update"
-- start: 2024-12-09
-  end:  
+  event: "Vendor reports that patch has been developed more time to test is needed."
+- start: 2024-12-19
+  end:   
   event: "Limited disclosure"
 - start: 2024-08-15
-  end:   2024-12-09
+  end:   2024-12-19
   event: "Time to limited disclosure"
-- start: 2024-12-09
-  end:  
-  event: "DIVD is scanning the internet to identify vulnerable systems"
+#- start: 2024-12-09
+#  end:  
+#  event: "DIVD is scanning the internet to identify vulnerable systems"
 - start: 2025-06-01
   end:  
   event: "Aproximate date for full disclosure"
 - start: 2024-08-15
-  end:   
+  end:   open
   event: "Time to full disclosure"
 ips: n/a
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
@@ -108,48 +89,36 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 26 severe vulnerabilities in two ioCharge products. 
+Security researcher Wilco van Beijnum assisted by DIVD researcher Harm van den Brink has found 18 severe vulnerabilities in two IoCharger products. 
 
-He found 17 vulnerabilities in the ioCharge Home ranging from CVSS9.9 to CVSS3.1. THese vulnerabilities are:
-- {% cve CVE-2024-43648 %} - Authenticated remote command execution vulnerability #1 - CVSS 9.9
-- {% cve CVE-2024-43649 %} - Authenticated remote command execution vulnerability #2 - CVSS 9.9
-- {% cve CVE-2024-43650 %} - Authenticated remote command execution vulnerability #3 - CVSS 9.9
-- {% cve CVE-2024-43651 %} - Authenticated remote command execution vulnerability #4 - CVSS 9.9
-- {% cve CVE-2024-43652 %} - Authenticated remote command execution vulnerability #5 - CVSS 9.9
-- {% cve CVE-2024-43653 %} - Authenticated remote command execution vulnerability #6 - CVSS 9.9
-- {% cve CVE-2024-43654 %} - Authenticated remote command execution vulnerability #7 - CVSS 9.9
-- {% cve CVE-2024-43655 %} - Authenticated remote command execution vulnerability #8 - CVSS 9.9
-- {% cve CVE-2024-43656 %} - Authenticated arbitrary file upload vulnerability #1 - CVSS 9.9
-- {% cve CVE-2024-43657 %} - Authenticated remote command execution vulnerability #9 - CVSS 9.9
-- {% cve CVE-2024-43658 %} - Authenticated arbitrary deletion of files vulnerability #1 - CVSS 9.6
-- {% cve CVE-2024-43659 %} - Insufficiently protected plain text default credentials #1 - CVSS 8.2
-- {% cve CVE-2024-43660 %} - Authenticated arbitrary file download vulnerability #1 - CVSS 7.7
-- {% cve CVE-2024-43661 %} - Authenticated buffer overflow leading to DoS vulnerability #1 - CVSS 6.5
-- {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload vulnerability #2 - CVSS 4.3
-- {% cve CVE-2024-43663 %} - Various authenticated buffer overflow vulnerabilities - CVSS 4.3
-- {% cve CVE-2024-43664 %} - Exposure of login service via the chargning cable (HLC) - CVSS 3.1
+He found 18 vulnerabilities in the IoCharger Home ranging from CVSS9.9 to CVSS3.1. THese vulnerabilities are:
+- {% cve CVE-2024-43648 %} - Authenticated remote command execution vulnerability #1 - CVSSv4 9.3
+- {% cve CVE-2024-43649 %} - Authenticated remote command execution vulnerability #2 - CVSSv4 9.3
+- {% cve CVE-2024-43650 %} - Authenticated remote command execution vulnerability #3 - CVSSv4 9.3
+- {% cve CVE-2024-43651 %} - Authenticated remote command execution vulnerability #4 - CVSSv4 9.3
+- {% cve CVE-2024-43652 %} - Authenticated remote command execution vulnerability #5 - CVSSv4 9.3
+- {% cve CVE-2024-43653 %} - Authenticated remote command execution vulnerability #6 - CVSSv4 9.3
+- {% cve CVE-2024-43654 %} - Authenticated remote command execution vulnerability #7 - CVSSv4 9.3
+- {% cve CVE-2024-43655 %} - Authenticated remote command execution vulnerability #8 - CVSSv4 9.3
+- {% cve CVE-2024-43656 %} - Authenticated arbitrary file upload vulnerability #1 - CVSSv4 9.3
+- {% cve CVE-2024-43657 %} - Authenticated remote command execution vulnerability #9 - CVSSv4 9.3
+- {% cve CVE-2024-43658 %} - Authenticated arbitrary deletion of files vulnerability #1 - CVSSv4 7.2
+- {% cve CVE-2024-43659 %} - Insufficiently protected plain text default credentials #1 - CVSSv4 8.4
+- {% cve CVE-2024-43660 %} - Authenticated arbitrary file download vulnerability #1 - CVSSv4 7.1
+- {% cve CVE-2024-43661 %} - Authenticated buffer overflow leading to DoS vulnerability #1 - CVSSv4 7.1
+- {% cve CVE-2024-43662 %} - Authenticated arbitrary file upload vulnerability #2 - CVSSv4 5.3
+- {% cve CVE-2024-43663 %} - Various authenticated buffer overflow vulnerabilities - CVSSv4 5.3
+- {% cve CVE-2024-43664 %} - Exposure of login service via the chargning cable (HLC) - CVSSv4 1.0
 
 Alltough all attacks are authenticated, an attacker that is in posession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successfull exploitation give an attacker the ability to take full control over any device it can gain acces to, either remotely via the internet, by being on the same (visitor) network as the charger or via the charging cable.
 
-He also found 9 vulnerabilities in the ioCharge Pedestal device, ranging from CVSS 9.9 to CVSS 4.3. THese vulnerabilities are:
-
-- {% cve CVE-2024-43665 %} - Authenticated remote command execution vulnerability #1 - CVSS 9.9
-- {% cve CVE-2024-43666 %} - Authenticated remote command execution vulnerability #2 - CVSS 9.9
-- {% cve CVE-2024-43667 %} - Authenticated remote command execution vulnerability #3 - CVSS 9.9
-- {% cve CVE-2024-43668 %} - Authenticated remote command execution vulnerability #4 - CVSS 9.9
-- {% cve CVE-2024-43669 %} - Authenticated remote command execution vulnerability #5 - CVSS 9.9
-- {% cve CVE-2024-43670 %} - Authenticated remote command execution vulnerability #6 - CVSS 9.9
-- {% cve CVE-2024-43671 %} - Insufficiently protected plain text default credentials #1 - CVSS 8.2
-- {% cve CVE-2024-43672 %} - Authenticated arbitrary file upload vulnerability #1 - CVSS 9.9
-- {% cve CVE-2024-43673 %} - Various authenticated buffer overflow vulnerabilities - CVSS 4.3
-
-Alltough all attacks are authenticated, an attacker that is in posession of a device or firmware image is able to extract all information needed to execute these attacks on other devices. Successfull exploitation give an attacker the ability to take full control over any device it can gain acces to, either remotely via the internet or by being on the same (visitor) network as the charger.
+The vendor reports that firmware version 20241118-190348 fixes these vulnerabilities, we have not been able to verify this because we no longer have access to the hardware.
 
 ## What you can do
 
-The vulnerabilities have been fix in either ioCharge Home firmware version (#TODO version number), or ioCharge Pendestal firmware version (#TODO: version number). The best cause of action is to update the firmware of your device. You can do so by (#TODO: update description)
+The vulnerabilities have been fix in firmware version 20241118-190348 which is applicable to both puducts (and potentially other IoCharger pruducts as well).  The best cause of action is to update the firmware of your device. We have not received clear information from the vendor as to whow you can update your device.
 
-Additionally we recommend that you do not expose your ioCharge device to an untrusted network. 
+Additionally we recommend that you do not expose your IoCharger device to an untrusted network. 
 
 ## What we are doing
 
@@ -159,6 +128,22 @@ DIVD has responsibly disclosed the vulnerability to ioCharge, whoi have released
 {% include timeline.html %}
 
 ## More information
-* [ioCharge website](https://iocharge.com/)
+* [IoCharger website](https://iocharger.com/)
 * [Product Website](https://iocharge.com/ac-charging-solutions/)
-* [ioCharge Advisory](http://...) (#TODO: need vendor advisory URL)
+* {% cve CVE-2024-43648 %}
+* {% cve CVE-2024-43649 %}
+* {% cve CVE-2024-43650 %}
+* {% cve CVE-2024-43651 %}
+* {% cve CVE-2024-43652 %}
+* {% cve CVE-2024-43653 %}
+* {% cve CVE-2024-43654 %}
+* {% cve CVE-2024-43655 %}
+* {% cve CVE-2024-43656 %}
+* {% cve CVE-2024-43657 %}
+* {% cve CVE-2024-43658 %}
+* {% cve CVE-2024-43659 %}
+* {% cve CVE-2024-43660 %}
+* {% cve CVE-2024-43661 %}
+* {% cve CVE-2024-43662 %}
+* {% cve CVE-2024-43663 %}
+* {% cve CVE-2024-43664 %}
