--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -130,6 +130,7 @@ DIVD has responsibly disclosed the vulnerability to ioCharge, whoi have released
 ## More information
 * [IoCharger website](https://iocharger.com/)
 * [Product Website](https://iocharge.com/ac-charging-solutions/)
+* [Blog post: Wilco van Beijnum and Harm van den Brink found 17 vulnerabilities in ioCharger EV chargers](/2024/12/18/Zero-day-vulnerabilities-ioCharger/)
 * {% cve CVE-2024-43648 %}
 * {% cve CVE-2024-43649 %}
 * {% cve CVE-2024-43650 %}
