--- a/_cases/2024/DIVD-2024-00031.md
+++ b/_cases/2024/DIVD-2024-00031.md
@@ -32,7 +32,11 @@ timeline:
   end:
   event: "First version of this casefile."
 # ips: 0
-
+# The lines below redirect all the CVE references to our site
+# Uncommend these lines if we are the CNA of record. (ask @cna_admins on Slack if you don't know)
+jekyll-secinfo:
+  cve:
+    url: /cves/CVE-
 ---
 
 ## Summary
