--- a/_cases/2024/DIVD-2024-00031.md
+++ b/_cases/2024/DIVD-2024-00031.md
@@ -47,7 +47,7 @@ Comfort Key released patched version 24.1.2. Please update to this version numbe
 
 
 ## What we are doing
-DIVD is currently working to identify parties that are running a vulnerable version of Geoserver and to notify these parties. We do this by verifying the presence of the vulnerability in a harmless manner and collect the software version number if possible.
+DIVD is currently working to identify parties that are running a vulnerable version of ComfortKey and to notify these parties. We do this by verifying the presence of the vulnerability in a harmless manner and collect the software version number if possible.
 
 {% include timeline.html %}
 
