case closed, but didn't had the closed status

--- a/_cases/2024/DIVD-2024-00041.md
+++ b/_cases/2024/DIVD-2024-00041.md
@@ -19,9 +19,9 @@ versions:
 recommendation: "Update to a non-vulnerable version"
 workaround: "none"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-09-24
-timeline:
+timeline: 2024-11-12
 - start: 2024-10-01
   end:
   event: "DIVD starts researching the vulnerability."
@@ -46,6 +46,7 @@ timeline:
 - start: 2024-11-12
   end:
   event: "Case closed."
+ips: 26
 ---
 
 ## Summary
