oops, added end

--- a/_cases/2024/DIVD-2024-00041.md
+++ b/_cases/2024/DIVD-2024-00041.md
@@ -21,7 +21,8 @@ workaround: "none"
 patch_status: Patch available
 status : Closed
 start: 2024-09-24
-timeline: 2024-11-12
+end: 2024-11-12
+timeline:
 - start: 2024-10-01
   end:
   event: "DIVD starts researching the vulnerability."
