--- a/_cases/2024/DIVD-2024-00044.md
+++ b/_cases/2024/DIVD-2024-00044.md
@@ -49,7 +49,7 @@ A missing authentication for critical function vulnerability [CWE-306] in FortiM
 Upgrade to a non-vulnerable version according to the FortiGuard advisory FG-IR-24-423. We recommend restricting public access to your instance when you are unable to either patch or apply the workaround provided by Fortinet. We also recommend checking your FortiManager for unrecognised serial numbers and perform forensics on your instance when you do find unrecognised serial numbers. Fortinet provides recovery methods in their FortiGuard advisory. 
 
 ## What we are doing
-DIVD is researching the vulnerability to determine a reliable fingerprint. 
+DIVD is currently working to identify parties that are running a vulnerable version of FortiManager and notify these parties.
 
 {% include timeline.html %}
 
