--- a/_cases/2024/DIVD-2024-00035.md
+++ b/_cases/2024/DIVD-2024-00035.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: "18 vulnerabilities in ioCharger devices"
+title: "17 vulnerabilities in Iocharger devices"
 excerpt: "Researchers have discovered 17 critical vulnerabilities in the IoCharger Home, 9 of these vulnerabilities also affect  the IoCharger Pedestal EV charging devices. Owners are advised to ensure that these devices cannot be reached from untrusted networks."
 author: 
 - Frank Breedijk
