--- a/_cases/2024/DIVD-2024-00052.md
+++ b/_cases/2024/DIVD-2024-00052.md
@@ -30,6 +30,9 @@ timeline:
 - start: 2024-12-10
   end:
   event: "Case opened and starting first scan."
+- start: 2024-12-27
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable devices in their network."
 ---
 
 ## Summary
